
Availability
------------
This release is not yet available.

Supported platforms
-------------------
This release has been tested on the following platforms:

New user-visible features
-------------------------
- (internet) Added TCP Vegas congestion control algorithm
- (internet) Added TCP Scalable congestion control algorithm
- (internet) Added TCP Veno congestion control algorithm

Bugs fixed
----------
- Bug 2057 - ARP and Ndisc caches should be updated by receiving valid L3 packets
- Bug 2346 - SixLowPan ConpressionThreshold can be violated.
- Bug 2329 - TCP Veno implementation
- Bug 2333 - TCP Scalable implementation
- Bug 2347 - LrWpan Ascii traces are hooked to the wrong traces.
- Bug 2353 - TCP Vegas implementation

Known issues
------------
In general, known issues are tracked on the project tracker available
at http://www.nsnam.org/bugzilla/

Release 3.25
============

Availability
------------
This release is available from:
https://www.nsnam.org/release/ns-allinone-3.25.tar.bz2

Supported platforms
-------------------
This release has been tested on the following platforms:
- Ubuntu 15.10 (64 bit) with g++-5.2.1
- Ubuntu 14.04 (64 bit) with g++-4.8.2
- Fedora Core 23 (64 bit) with g++-5.3.1
- Fedora Core 22 (32 bit) with g++-5.1.1
- Fedora Core 21 (64 bit) with g++-4.9.2
- Arch Linux (64 bit) with g++-5.3.0 and clang++-3.7.1
- CentOS/RHEL 6.7 (64-bit) with g++-4.4.7
- OS X El Capitan 10.11.4 with Xcode 7.3 and Apple LLVM version 7.3.0
- OS X El Capitan 10.11.3 with Xcode 7.2.1 and Apple LLVM version 7.0.2
- OS X Yosemite 10.10.5 with Xcode 7.2.1 and Apple LLVM version 7.0.2
- FreeBSD 10.2-RELEASE (64 bit) with clang-3.4.1

New user-visible features
-------------------------
- (internet) The native TCP implementation has been refactored, for the 
  following improvements:  
    1) congestion control has been aligned with the Linux architecture, 
       to facilitate easier coding of new congestion control algorithms